--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "on_screen_keyboard",
   "version": "0.1.0",
   "private": true,
+  "author": "Adamenko A.",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -18,7 +19,7 @@
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "3.4.3",
     "typescript": "^3.9.6"
   },
   "scripts": {
@@ -41,5 +42,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^4.3.0",
+    "html-webpack-plugin": "^4.5.0",
+    "style-loader": "^1.2.1",
+    "ts-loader": "^8.0.4",
+    "webpack": "4.42.0",
+    "webpack-cli": "^3.3.12"
   }
 }
